--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "lil-gui": "^0.19.2",
     "three": "^0.165.0",
     "vite-plugin-restart": "^0.4.0"
   }
